--- a/docker/dockerfile/Dockerfile
+++ b/docker/dockerfile/Dockerfile
@@ -1,10 +1,8 @@
 FROM node:18-alpine as builder
 
-WORKDIR /var/www/app
+WORKDIR /var/www/html
 
 COPY package*.json ./
 RUN npm install
-
-EXPOSE 3000
 
 CMD [ "npm", "start" ]
