--- a/docker/dockerfile/Dockerfile.prod
+++ b/docker/dockerfile/Dockerfile.prod
@@ -1,10 +1,13 @@
 FROM node:18-alpine as builder
 
-WORKDIR /var/www/app
+WORKDIR /var/www/html
 
 COPY package*.json ./
 RUN npm install
+RUN npm ci --only=production
 
-EXPOSE 3000
+COPY .. .
 
-CMD [ "npm", "start" ]
+RUN npm run build && npm install -g serve
+
+CMD [ "serve", "-s", "build" ]
