--- a/docker/dockerfile/Dockerfile
+++ b/docker/dockerfile/Dockerfile
@@ -4,6 +4,6 @@ WORKDIR /var/www/html
 
 COPY package*.json ./
 RUN npm install
-RUN npm install --global yarn
+#RUN npm install --global yarn
 
 CMD [ "npm", "start" ]
