--- a/docker/dockerfile/Dockerfile.prod
+++ b/docker/dockerfile/Dockerfile.prod
@@ -4,7 +4,7 @@ WORKDIR /var/www/html
 
 COPY package*.json ./
 RUN npm install
-RUN npm install --global yarn
+#RUN npm install --global yarn
 
 COPY .. .
 
