--- a/docker/docker-compose.prod.yml
+++ b/docker/docker-compose.prod.yml
@@ -13,8 +13,22 @@ services:
       - radx
     #ports:
     #  - 3000:3000
+    #expose:
+    #  - 3000
+
+  portfolio_nginx_front:
+    container_name: portfolio_nginx_front
+    image: nginx:latest
+    restart: on-failure
+    networks:
+      - radx
     expose:
-      - 3000
+      - 80
+    volumes:
+      - ..:/var/www/html
+      - /var/www/html/node_modules
+      - ./logs:/var/log/nginx
+      - ./config/nginx:/etc/nginx/conf.d
 
 networks:
   radx:
