--- a/docker/dockerfile/Dockerfile.prod
+++ b/docker/dockerfile/Dockerfile.prod
@@ -8,6 +8,4 @@ RUN npm install
 
 COPY .. .
 
-RUN npm run build && npm install -g serve
-
-CMD [ "serve", "-s", "build" ]
+CMD [ "npm", "run", "build" ]
