--- a/docker/docker-compose.stage.yml
+++ b/docker/docker-compose.stage.yml
@@ -1,5 +1,3 @@
-#version: "3.4"
-name: portfolio_front
 services:
   portfolio_react_front:
     container_name: portfolio_react_front
@@ -10,8 +8,7 @@ services:
     networks:
       - radx
     volumes:
-      - ..:/var/www/html
-      - /var/www/html/node_modules
+      - ../src:/var/www/html/src
     expose:
       - 3000
     environment:
