--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,4 +1,3 @@
-#version: "3.4"
 name: portfolio_front
 services:
   portfolio_react_front:
@@ -9,8 +8,7 @@ services:
     restart: on-failure
     platform: linux/arm64
     volumes:
-      - ..:/var/www/html
-      - /var/www/html/node_modules
+      - ../src:/var/www/html/src
     ports:
       - "3000:3000"
     environment:
