--- a/docker/dockerfile/Dockerfile.prod
+++ b/docker/dockerfile/Dockerfile.prod
@@ -1,11 +1,32 @@
-FROM node:18-alpine
+FROM node:18-alpine AS builder
+ENV NODE_ENV production
 
+# Add a work directory
 WORKDIR /var/www/html
 
-COPY package*.json ./
-RUN npm install
-#RUN npm install --global yarn
+# Cache and Install dependencies
+COPY package.json .
+COPY yarn.lock .
+RUN npm i
 
-COPY .. .
+# Copy app files
+COPY . .
 
-CMD [ "npm", "run", "build" ]
+# Build the app
+RUN npm run build
+
+# Bundle static assets with nginx
+FROM nginx:1.27.1-alpine as production
+ENV NODE_ENV production
+
+# Copy built assets from builder
+COPY --from=builder /var/www/html/build /usr/share/nginx/html
+
+# Add your nginx.conf
+COPY ./docker/config/nginx/nginx.conf /etc/nginx/conf.d/default.conf
+
+# Expose port
+EXPOSE 3000
+
+# Start nginx
+CMD ["nginx", "-g", "daemon off;"]
