--- a/docker/dockerfile/Dockerfile.prod
+++ b/docker/dockerfile/Dockerfile.prod
@@ -7,7 +7,7 @@ WORKDIR /var/www/html
 # Cache and Install dependencies
 COPY package.json .
 COPY yarn.lock .
-RUN npm i
+RUN npm install
 
 # Copy app files
 COPY . .
