--- a/docker/dockerfile/Dockerfile
+++ b/docker/dockerfile/Dockerfile
@@ -3,9 +3,18 @@ ENV NODE_ENV development
 
 WORKDIR /var/www/html
 
+RUN set -eux \
+    & apk add \
+        --no-cache \
+        nodejs \
+        yarn
+
 COPY package.json .
 COPY yarn.lock .
-RUN npm install
+
+RUN yarn global add yarn-deduplicate
+RUN yarn-deduplicate
+RUN yarn install
 
 COPY . .
 
