--- a/docker/dockerfile/Dockerfile.prod
+++ b/docker/dockerfile/Dockerfile.prod
@@ -7,7 +7,10 @@ WORKDIR /var/www/html
 # Cache and Install dependencies
 COPY package.json .
 COPY yarn.lock .
-RUN npm install
+
+RUN yarn global add yarn-deduplicate
+RUN yarn-deduplicate
+RUN yarn install
 
 # Copy app files
 COPY . .
@@ -26,7 +29,7 @@ COPY --from=builder /var/www/html/build /usr/share/nginx/html
 COPY ./docker/config/nginx/nginx.conf /etc/nginx/conf.d/default.conf
 
 # Expose port
-EXPOSE 3000
+EXPOSE 8080
 
 # Start nginx
 CMD ["nginx", "-g", "daemon off;"]
