--- a/docker/dockerfile/Dockerfile.prod
+++ b/docker/dockerfile/Dockerfile.prod
@@ -4,6 +4,12 @@ ENV NODE_ENV production
 # Add a work directory
 WORKDIR /var/www/html
 
+RUN set -eux \
+    & apk add \
+        --no-cache \
+        nodejs \
+        yarn
+
 # Cache and Install dependencies
 COPY package.json .
 COPY yarn.lock .
@@ -29,7 +35,7 @@ COPY --from=builder /var/www/html/build /usr/share/nginx/html
 COPY ./docker/config/nginx/nginx.conf /etc/nginx/conf.d/default.conf
 
 # Expose port
-EXPOSE 8080
+EXPOSE 3000
 
 # Start nginx
 CMD ["nginx", "-g", "daemon off;"]
