--- a/docker/docker-compose.prod.yml
+++ b/docker/docker-compose.prod.yml
@@ -8,8 +8,8 @@ services:
     restart: on-failure
     networks:
       - radx
-    ports:
-      - "3000:80"
+    expose:
+      - 3000
 
 networks:
   radx:
